Fix vertical align for granule count

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -281,6 +281,8 @@
       color: #474747;
       padding: 0;
       flex-grow: 1;
+      margin-bottom: -0.5em;
+      line-height: 1em;
     }
 
     input {
